[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/sprite_animations.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/newPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/newgameplay.gd" type="Script" id=3]
[ext_resource path="res://images/ui_elements/pause.png" type="Texture" id=4]
[ext_resource path="res://scripts/multitarget_camera.gd" type="Script" id=5]
[ext_resource path="res://scripts/GameStates/GameMachine.gd" type="Script" id=6]
[ext_resource path="res://scripts/GameStates/Pause.gd" type="Script" id=7]
[ext_resource path="res://scripts/GameStates/Main.gd" type="Script" id=8]
[ext_resource path="res://scripts/GameStates/GameOver.gd" type="Script" id=9]
[ext_resource path="res://scripts/GameStates/GamePlay.gd" type="Script" id=10]
[ext_resource path="res://images/ui_elements/right.png" type="Texture" id=11]
[ext_resource path="res://images/ui_elements/forward.png" type="Texture" id=12]
[ext_resource path="res://audio/Punch2__004.wav" type="AudioStream" id=13]
[ext_resource path="res://uitheme/new_theme.tres" type="Theme" id=14]

[sub_resource type="Animation" id=1]
resource_name = "show_game_over"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Overlay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Overlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 5.85634, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "hide_game_over" ],
"method": "_on_animation_finished"
}, {
"args": [ "show_game_over" ],
"method": "_on_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/GameOver/ReplayButton:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 8.57416, 1 ),
"update": 0,
"values": [ 200.0, -200.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Hud/HBoxContainer:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 8.28211, 2.82842 ),
"update": 0,
"values": [ -20.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Hud/PauseButton:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 8.87655, 1 ),
"update": 0,
"values": [ 0.0, 66.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Hud/PauseButton:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 8.87655, 1 ),
"update": 0,
"values": [ -66.0, 0.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("StateMachine")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "show_hud" ],
"method": "_on_animation_finished"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Overlay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Overlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 5.85634, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/MainMenu/PlayButton:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 7.46426, 1 ),
"update": 0,
"values": [ 200.0, -200.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("StateMachine")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "hide_main_menu" ],
"method": "_on_animation_finished"
}, {
"args": [ "show_main_menu" ],
"method": "_on_animation_finished"
} ]
}

[node name="GamePlay" type="Node2D"]
script = ExtResource( 3 )

[node name="FadingObject" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Target1" parent="." instance=ExtResource( 1 )]

[node name="Target2" parent="." instance=ExtResource( 1 )]
position = Vector2( 526.961, 126.233 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 5 )
zoom_speed = 0.5
min_zoom = 2.0
max_zoom = 2
margin = Vector2( 400, 400 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
start_state = NodePath("MainMenu")

[node name="MainMenu" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
main_menu_path = NodePath("../../CanvasLayer/MainMenu")
btn_sfx_path = NodePath("../../ButtonClick")

[node name="Pause" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
hud_path = NodePath("../../CanvasLayer/Hud")

[node name="GameOver" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
game_over_path = NodePath("../../CanvasLayer/GameOver")
btn_sfx_path = NodePath("../../ButtonClick")
score_label_path = NodePath("../../CanvasLayer/GameOver/ScoreValue")

[node name="GamePlay" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
game_hud = NodePath("../../CanvasLayer/Hud")
btn_sfx_path = NodePath("../../ButtonClick")
pause_button_path = NodePath("../../CanvasLayer/Hud/PauseButton")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Hud"]
margin_left = 5.0
margin_top = 5.0
margin_right = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Hud/HBoxContainer"]
margin_right = 43.0
margin_bottom = 14.0
text = "Score: "

[node name="ScoreValue" type="Label" parent="CanvasLayer/Hud/HBoxContainer"]
margin_left = 47.0
margin_right = 71.0
margin_bottom = 14.0
text = "100"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Hud"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="PauseButton" type="TextureButton" parent="CanvasLayer/Hud"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_right = 1.0
margin_bottom = 66.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 14 )

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = 200.0
margin_right = 50.0
margin_bottom = 146.0
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -139.5
margin_right = 61.0
margin_bottom = -96.5
text = "Game Over"

[node name="ScoreValue" type="Label" parent="CanvasLayer/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -77.5
margin_right = 67.5
margin_bottom = -34.5
rect_pivot_offset = Vector2( 66.458, 22.7264 )
size_flags_horizontal = 4
text = "Score: 0"
align = 1
valign = 1

[node name="ReplayButton" type="TextureButton" parent="CanvasLayer/GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -200.0
margin_right = 50.0
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_game_over = SubResource( 1 )
anims/show_hud = SubResource( 2 )
anims/show_main_menu = SubResource( 3 )

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
pitch_scale = 5.0

[connection signal="toggled" from="CanvasLayer/Hud/PauseButton" to="StateMachine/Pause" method="_on_PauseButton_toggled"]
[connection signal="toggled" from="CanvasLayer/Hud/PauseButton" to="StateMachine/GamePlay" method="_on_PauseButton_toggled"]
[connection signal="pressed" from="CanvasLayer/MainMenu/PlayButton" to="StateMachine/MainMenu" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOver/ReplayButton" to="StateMachine/GameOver" method="_on_ReplayButton_pressed"]
